--- a/index.html
+++ b/index.html
@@ -126,13 +126,6 @@
               to="2 30 3"
               repeat="indefinite"></a-animation>
       </a-entity>
-      <a-entity mixin="cylinder" position="6 -17 -1">
-        <a-animation attribute="position"
-              dur="2000"
-              from="6 -170 -1"
-              to="6 40 -1"
-              repeat="indefinite"></a-animation>
-      </a-entity>
     </a-entity>
   <!-- middle -->
 
@@ -163,7 +156,199 @@
                   to="-3 40 -1"></a-animation>
             </a-animation>
       </a-entity>
+      <a-entity mixin="cylinder2" position="-3 -120 1">
+        <a-animation attribute="position"
+              dur="10000"
+              from="-3 -120 1"
+              to="-3 40 1"
+              repeat="indefinite">
+              <a-animation attribute="scale"
+                  dur="9840"
+                  from="-3 -120 1"
+                  to="-3 40 1"></a-animation>
+            </a-animation>
+      </a-entity>
+      <a-entity mixin="cylinder2" position="3 -120 1">
+        <a-animation attribute="position"
+              dur="10000"
+              from="3 -120 1"
+              to="3 40 1"
+              repeat="indefinite">
+              <a-animation attribute="scale"
+                  dur="9840"
+                  from="3 -120 1"
+                  to="3 40 1"></a-animation>
+            </a-animation>
+      </a-entity>
+      <a-entity mixin="cylinder2" position="-3.4 -120 0">
+        <a-animation attribute="position"
+              dur="10000"
+              from="-3.4 -120 0"
+              to="-3.4 40 0"
+              repeat="indefinite">
+              <a-animation attribute="scale"
+                  dur="9840"
+                  from="-3.4 -120 0"
+                  to="-3.4 40 0"></a-animation>
+            </a-animation>
+      </a-entity>
+      <a-entity mixin="cylinder2" position="3.4 -120 0">
+        <a-animation attribute="position"
+              dur="10000"
+              from="3.4 -120 0"
+              to="3.4 40 0"
+              repeat="indefinite">
+              <a-animation attribute="scale"
+                  dur="9840"
+                  from="3.4 -120 0"
+                  to="3.4 40 0"></a-animation>
+            </a-animation>
+      </a-entity>
+      <a-entity mixin="cylinder2" position="-2.8 -120 -0.4">
+        <a-animation attribute="position"
+              dur="10000"
+              from="-2.8 -120 -0.4"
+              to="-2.8 40 -0.4"
+              repeat="indefinite">
+              <a-animation attribute="scale"
+                  dur="9840"
+                  from="-2.8 -120 -0.4"
+                  to="-2.8 40 -0.4"></a-animation>
+            </a-animation>
+      </a-entity>
+      <a-entity mixin="cylinder2" position="2.8 -120 -0.4">
+        <a-animation attribute="position"
+              dur="10000"
+              from="2.8 -120 -0.4"
+              to="2.8 40 -0.4"
+              repeat="indefinite">
+              <a-animation attribute="scale"
+                  dur="9840"
+                  from="2.8 -120 -0.4"
+                  to="2.8 40 -0.4"></a-animation>
+            </a-animation>
+      </a-entity>
+      <a-entity mixin="cylinder2" position="-3.3 -120 -1.6">
+        <a-animation attribute="position"
+              dur="10000"
+              from="-3.3 -120 -1.6"
+              to="-3.3 40 -1.6"
+              repeat="indefinite">
+              <a-animation attribute="scale"
+                  dur="9840"
+                  from="-3.3 -120 -1.6"
+                  to="-3.3 40 -1.6"></a-animation>
+            </a-animation>
+      </a-entity>
+      <a-entity mixin="cylinder2" position="3.3 -120 -1.6">
+        <a-animation attribute="position"
+              dur="10000"
+              from="3.3 -120 -1.6"
+              to="3.3 40 -1.6"
+              repeat="indefinite">
+              <a-animation attribute="scale"
+                  dur="9840"
+                  from="3.3 -120 -1.6"
+                  to="3.3 40 -1.6"></a-animation>
+            </a-animation>
+      </a-entity>
+      <a-entity mixin="cylinder2" position="-3.3 -120 1.6">
+        <a-animation attribute="position"
+              dur="10000"
+              from="-3.3 -120 1.6"
+              to="-3.3 40 1.6"
+              repeat="indefinite">
+              <a-animation attribute="scale"
+                  dur="9840"
+                  from="-3.3 -120 1.6"
+                  to="-3.3 40 1.6"></a-animation>
+            </a-animation>
+      </a-entity>
+      <a-entity mixin="cylinder2" position="3.3 -120 1.6">
+        <a-animation attribute="position"
+              dur="10000"
+              from="3.3 -120 1.6"
+              to="3.3 40 1.6"
+              repeat="indefinite">
+              <a-animation attribute="scale"
+                  dur="9840"
+                  from="3.3 -120 1.6"
+                  to="3.3 40 1.6"></a-animation>
+            </a-animation>
+      </a-entity>
+      <a-entity mixin="cylinder2" position="-3.1 -120 0.5">
+        <a-animation attribute="position"
+              dur="10000"
+              from="-3.1 -120 0.5"
+              to="-3.1 40 0.5"
+              repeat="indefinite">
+              <a-animation attribute="scale"
+                  dur="9840"
+                  from="-3.1 -120 0.5"
+                  to="-3.1 40 0.5"></a-animation>
+            </a-animation>
+      </a-entity>
+      <a-entity mixin="cylinder2" position="3.1 -120 0.5">
+        <a-animation attribute="position"
+              dur="10000"
+              from="3.1 -120 0.5"
+              to="3.1 40 0.5"
+              repeat="indefinite">
+              <a-animation attribute="scale"
+                  dur="9840"
+                  from="3.1 -120 0.5"
+                  to="3.1 40 0.5"></a-animation>
+            </a-animation>
+      </a-entity>
 
+      <a-entity mixin="cylinder2" position="-2.9 -120 -2">
+        <a-animation attribute="position"
+              dur="10000"
+              from="-2.9 -120 -2"
+              to="-2.9 40 -2"
+              repeat="indefinite">
+              <a-animation attribute="scale"
+                  dur="9840"
+                  from="-2.9 -120 -2"
+                  to="-2.9 40 -2"></a-animation>
+            </a-animation>
+      </a-entity>
+      <a-entity mixin="cylinder2" position="2.9 -120 -2">
+        <a-animation attribute="position"
+              dur="10000"
+              from="2.9 -120 -2"
+              to="2.9 40 -2"
+              repeat="indefinite">
+              <a-animation attribute="scale"
+                  dur="9840"
+                  from="2.9 -120 -2"
+                  to="2.9 40 -2"></a-animation>
+            </a-animation>
+      </a-entity>
+      <a-entity mixin="cylinder2" position="3.7 -120 -1.7">
+        <a-animation attribute="position"
+              dur="10000"
+              from="3.7 -120 -1.7"
+              to="3.7 40 -1.7"
+              repeat="indefinite">
+              <a-animation attribute="scale"
+                  dur="9840"
+                  from="3.7 -120 -1.7"
+                  to="3.7 40 -1.7"></a-animation>
+            </a-animation>
+      </a-entity>
+      <a-entity mixin="cylinder2" position="3.7 -120 -1.7">
+        <a-animation attribute="position"
+              dur="10000"
+              from="-3.7 -120 -1.7"
+              to="-3.7 40 -1.7"
+              repeat="indefinite">
+              <a-animation attribute="scale"
+                  dur="9840"
+                  from="-3.7 -120 -1.7"
+                  to="-3.7 40 -1.7"></a-animation>
+            </a-animation>
+      </a-entity>
       <!--top-->
       <a-entity mixin="cylinder2" position="1 -120 -4">
         <a-animation attribute="position"
